# doubri

./: CMakeLists.txt  README.ja.md  README.md  apply-each.cc  apply-whole.cc  apply.cc  common.h  dedup.cc  dedup_self.cc  index.hpp  merge.cc  minhash.cc  minhash.h  minhash.hpp  similarity.cc  spdlog_util.hpp
assets/: similarity.py
scripts/: analyze-dedup-cc.py  analyze-dedup-ninjal.py  apply-each-cc.sh  apply-for-group.sh  apply-whole-cc-ninjal.sh  apply-whole-cc.sh  apply-whole-ninjal.sh  apply.py  collect-dedup-log.py  concat-split.sh  concat.py  dedup-ninjal.sh  dedup.sh  merge-cc-bwd.py  merge.py  prepare.sh
test/enron_spam_data/: build-dataset.py  evaluate-dedup.py  evaluate-flag.py  evaluate-merge.py  result-all-flag-r.txt  result-all-flag.txt  result-merge-flag-2-r.txt  result-merge-flag-2.txt  result-merge-flag-3-r.txt  result-merge-flag-3.txt  result-merge-flag-4.txt  result-merge-flag-5-r.txt  result-merge-flag-5.txt  result-merge-flag-6-r.txt  result-merge-flag-7-r.txt  result-merge-flag-7.txt  result-merge-flag-8-r.txt  result-merge-flag-9-r.txt  result-merge-flag-9.txt  run.sh
